[gd_scene load_steps=4 format=2]

[ext_resource path="res://icons/tick_icon.svg" type="Texture" id=1]
[ext_resource path="res://fonts/res/popup_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/disconnect_master_server_dialog.gd" type="Script" id=4]

[node name="DisconnectMasterServerDialog" type="PopupPanel"]
margin_right = 530.0
margin_bottom = 250.0
popup_exclusive = true
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 14
custom_constants/margin_left = 14

[node name="MainContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 14.0
margin_right = 508.0
margin_bottom = 242.0

[node name="LabelContainer" type="VBoxContainer" parent="MarginContainer/MainContainer"]
margin_top = 29.0
margin_right = 494.0
margin_bottom = 173.0
size_flags_vertical = 6
custom_constants/separation = 18

[node name="ConnectionClosedLabel" type="Label" parent="MarginContainer/MainContainer/LabelContainer"]
margin_right = 494.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
align = 1
autowrap = true

[node name="ResultClientLabel" type="Label" parent="MarginContainer/MainContainer/LabelContainer"]
visible = false
margin_top = 48.0
margin_right = 494.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 2 )
text = "The session can continue, but this client will no longer receive notifications of new players, which may cause errors in the future."
align = 1
autowrap = true

[node name="ResultHostLabel" type="Label" parent="MarginContainer/MainContainer/LabelContainer"]
margin_top = 48.0
margin_right = 494.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 2 )
text = "The session can continue, but new players will no longer be able to join this session. You will need to host a new room in order for others to join."
align = 1
autowrap = true

[node name="OptionContainer" type="HBoxContainer" parent="MarginContainer/MainContainer"]
margin_top = 206.0
margin_right = 494.0
margin_bottom = 242.0

[node name="BackButton" type="Button" parent="MarginContainer/MainContainer/OptionContainer"]
margin_left = 207.0
margin_right = 287.0
margin_bottom = 36.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 2 )
text = "OK"
icon = ExtResource( 1 )
expand_icon = true

[connection signal="pressed" from="MarginContainer/MainContainer/OptionContainer/BackButton" to="." method="_on_BackButton_pressed"]
